--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="color1">#cc99ff</color>
+    <color name="colorPrimary">#58738d</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#ccccff</color>
+    <color name="color1">#c0ccd8</color>
+    <color name="colorFields">#eff2f5</color>
 </resources>
