--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,11 +2,17 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin2">30dp</dimen>
+    <dimen name="activity_vertical_margin2">16dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="nav_vertical_spacing">5dp</dimen>
     <dimen name="fab_margin1">60dp</dimen>
     <dimen name="fab_margin2">100dp</dimen>
     <dimen name="fab_margin3">60dp</dimen>
     <dimen name="text_margin">20dp</dimen>
-    <dimen name="fab_margin">20dp</dimen>
+    <dimen name="button_dim1">70dp</dimen>
+    <dimen name="button_dim2">70dp</dimen>
+    <dimen name="button_dim3">70dp</dimen>
+    <dimen name="navbar">120dp</dimen>
 
 </resources>
