--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,5 +14,8 @@
     <dimen name="button_dim2">70dp</dimen>
     <dimen name="button_dim3">70dp</dimen>
     <dimen name="navbar">120dp</dimen>
+    <dimen name="nav_header_vertical_spacing">8dp</dimen>
+    <dimen name="nav_header_height">200dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 </resources>
